Add profile pictures to the home page and individual post pages

--- a/_posts/2015/2015-03-05-howdy!.md
+++ b/_posts/2015/2015-03-05-howdy!.md
@@ -3,6 +3,7 @@ layout: post
 published: 2015-03-05T18:52:19-06:00
 title: Howdy!
 author: Brandy & David
+profile_link: "/media/profile-pics/brandy-50x50@2x.jpg"
 ---
 One month ago, we filed our paperwork with the tax assessor and Shepherd Dog officially came to life. Since then we have been working with clients and building our own website which we are thrilled to share today.
 
